Ingress-nginx/ingress-nginx-public/sre-mgmt-dev/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name:  atlantis-demo-ext-svc
spec:
  type: ExternalName
  externalName: atlantis.atlantis.svc.cluster.local
  ports:
  - name: http
    port: 8080
    targetPort: 4141
    protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name:  jenkins-demo-ext-svc
spec:
  type: ExternalName
  externalName: jenkins-service.jenkins.svc.cluster.local
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
